# P2_github

./: .coveragerc  class_index.html  function_index.html  index.html  pyproject.toml  status.json  z_ab5651946e55948e___init___py.html
docs/: Makefile  conf.py  index.rst  modules.rst  projet_github.rst
src/projet_github/: __init__.py
tests/: __init__.py  test_voiture.py
